# geostl

./: .gitignore  .readthedocs.yaml  DESIGN.md  LICENSE  README.md  pyproject.toml  scratchpad.ipynb
docs/: api.rst  conf.py  design.rst  index.md  quickstart.md  requirements.txt
examples/: austria_dgm.py  austria_dgm_api.py  austria_dgm_grid.py  bavaria_dgm.py  opentopography_global.py  southtyrol_dgm.py
meshing/: mesher.py
src/geostl/: __init__.py  cli.py  elevation.py  geometry.py  mesh.py  preview.py  rectify.py  scaling.py  tiling.py
src/geostl/sources/: __init__.py  _raster.py  austria.py  base.py  cog.py  germany.py  italy.py  local.py  opentopography.py  south_tyrol.py  wcs.py
tests/: conftest.py  test_austria.py  test_cog.py  test_geometry.py  test_germany.py  test_italy.py  test_local_source.py  test_mesh.py  test_opentopography.py  test_raster_mosaic.py  test_scaling.py  test_smoke.py  test_south_tyrol.py  test_tiling.py
