[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geostl"
version = "0.0.1"
description = "Import public elevation data (GeoTIFF/DEM) and produce 3D-printable terrain STL sections."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Fabian Bachl", email = "fabian.bachl@usound.com" }]
keywords = ["gis", "dem", "geotiff", "stl", "3d-printing", "terrain", "elevation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "numpy-stl>=3.0",
    "requests>=2.28",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
fallback = ["geopy>=2.3"]
validate = ["trimesh>=4.0"]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "myst-parser>=2.0",
]
dev = [
    "pytest>=7.4",
    "responses>=0.24",
    "trimesh>=4.0",
    "matplotlib>=3.7",
]

[project.scripts]
geostl = "geostl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/geostl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "network: tests that require network access (deselect with '-m \"not network\"')",
]
